--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "url": "https://github.com/robcresswell/vue-material-design-icons/issues"
   },
   "scripts": {
+    "prepare": "npm run build",
     "prebuild": "rm -rf dist/",
     "build": "./build.js",
     "postbuild": "cp styles.css package.json README.md dist/",
